Create Driver Added

--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -137,7 +137,7 @@
                         <ul class="nav nav-tabs border-0">
                             <li><a class="btn btn-dark" data-toggle="tab" href="#menu1">Previous</a></li> &nbsp;
                             <li>&nbsp;&nbsp;</li> &nbsp;
-                            <li><a class="btn btn-dark" data-toggle="tab" href="#menu3">&nbsp; Next &nbsp;</a></li>
+                            <li><a class="btn btn-dark" data-toggle="tab" href="#menu3" onclick="" id="nextBtn">&nbsp; Next &nbsp;</a></li>
                         </ul>
                     </div>
                 </div>
