--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -33,7 +33,7 @@
     </div>
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
-                <nav id="nav-menu-container" class="col-md-12">
+                <nav id="nav-menu-container" class="col-md-8">
                     <ul class="nav-menu">
                         <li class="menu-active">@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
@@ -43,9 +43,9 @@
                         {
                             <li>@Html.ActionLink("Setup Queue", "Index", "Queue")</li>
                         }
-                       @if (User.IsInRole("Controller")|| User.IsInRole("Administrator"))
-                       {
-                        <li>@Html.ActionLink("Requisition Queue", "Queue", "RequisitionQueue")</li>
+                        @if (User.IsInRole("Controller") || User.IsInRole("Administrator"))
+                        {
+                            <li>@Html.ActionLink("Requisition Queue", "Index", "Queue")</li>
                             <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
 
                             <li class="menu-has-children">
@@ -56,7 +56,7 @@
                                     <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
                                 </ul>
                             </li>
-                       }
+                        }
                         @if (User.IsInRole("Administrator"))
                         {
                             <li>@Html.ActionLink("Create Controller", "CreateController", "Account")</li>
@@ -65,9 +65,45 @@
                         {
                             <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
                         }
-            
-                    </ul>        
-                </nav><!-- #nav-menu-container -->
+
+                    </ul>
+
+            </nav><!-- #nav-menu-container -->
+
+@if (User.IsInRole("Controller"))
+{
+    <nav class="col-md-3">
+        <!--Notification-->
+        <ul>
+            <li class="dropdown">
+                @if (@ViewBag.count > 0)
+                {
+                    <button title="Notification" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">&nbsp; &nbsp; @ViewBag.count</span></span></button>
+                }
+                else
+                {
+                    <button title="Notification" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i>&nbsp; &nbsp; @ViewBag.count</span></button>
+                }
+
+                <ul class="dropdown-menu">
+                    @if (ViewBag.Notification != null)
+                    {
+                        var data = ViewBag.Notification;
+                        foreach (var dt in data)
+                        {
+                            <li><a href="#"> @dt.Employee.FullName &nbsp; @dt.Text &nbsp; @dt.NotifyDateTime.ToString("hh:mm tt")</a></li>
+                            <hr/>
+                        }
+                        <p class="text-center font-weight-bold">New Requiest List</p>
+                    }
+
+
+                </ul>
+            </li>
+        </ul>
+
+    </nav>
+}
         </div>
     </div>
 </header><!-- End header -->
