--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -100,19 +100,29 @@
                                 <br/><br/>
                                 <div class="col-md-12">
                                     <div class="col-md-12 col-12">
-                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo6"><i class="fa fa-user" aria-hidden="true"></i> Employee</a><br/>
+                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo6"><i class="fa fa-user" aria-hidden="true"></i> Employee</a><br />
                                     </div>
                                     <div id="demo6" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
-                                        @Html.ActionLink("Create New", "Create", "Employees")<br/>
+                                        @Html.ActionLink("Create New", "Create", "Employees")<br />
                                         @Html.ActionLink("List Of Employee", "Index", "Employees")
                                     </div>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
                                     <div class="col-md-12 col-12">
-                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo7"><i class="fa fa-car" aria-hidden="true"></i> Vehicle Type</a><br/>
+                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo7"><i class="fa fa-user" aria-hidden="true"></i> Driver</a><br />
                                     </div>
                                     <div id="demo7" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                        @Html.ActionLink("Create New", "CreateDriver", "Employees")<br />
+                                        @Html.ActionLink("List Of Driver", "Index", "Employees")
+                                    </div>
+                                </div>
+                                <br /><br />
+                                <div class="col-md-12">
+                                    <div class="col-md-12 col-12">
+                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo8"><i class="fa fa-car" aria-hidden="true"></i> Vehicle Type</a><br/>
+                                    </div>
+                                    <div id="demo8" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Create New", "Create", "VehicleTypes")<br/>
                                         @Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")
                                     </div>
@@ -120,9 +130,9 @@
                                 <br/><br/>
                                 <div class="col-md-12">
                                     <div class="col-md-12 col-12">
-                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo8"><i class="fa fa-car" aria-hidden="true"></i> Vehicle</a><br/>
+                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo9"><i class="fa fa-car" aria-hidden="true"></i> Vehicle</a><br/>
                                     </div>
-                                    <div id="demo8" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                    <div id="demo9" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
                                         @Html.ActionLink("Create New", "Create", "Vehicles")<br/>
                                         @Html.ActionLink("List Of Vehicle", "Index", "Vehicles")
                                     </div>
