Requisition Type Added

--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -51,6 +51,10 @@
             <td>@Html.DisplayNameFor(model => model.RequestFor)</td>
             <td>@Html.DisplayFor(model => model.RequestFor)</td>
         </tr>
+        <tr>
+            <td>@Html.DisplayNameFor(model => model.RequisitionType)</td>
+            <td>@Html.DisplayFor(model => model.RequisitionType)</td>
+        </tr>
         
     </table>
     <p>
