--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -83,13 +83,17 @@
                 </div>
             </div>
 
-            @*<div class="form-group row">
-                @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionType, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Personal")Personal
+                    &nbsp; &nbsp; &nbsp;
+
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Official")Official;
+                    @Html.ValidationMessageFor(model => model.RequisitionType, "", new { @class = "text-danger" })
                 </div>
-            </div>*@
+            </div>
 
             <div class="form-group row">
                 <div class="col-md-3"></div>
