--- a/RMS.App/Views/Departments/Create.cshtml
+++ b/RMS.App/Views/Departments/Create.cshtml
@@ -39,8 +39,8 @@
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-                <p class="text-danger">@ViewBag.Message2</p>
+                @*@Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message2</p>*@
             </div>
         </div>
 
