--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row">
+                @*<div class="form-group row">
 
                     @Html.LabelFor(model => model.Email, htmlAttributes: new {@class = "control-label col-md-3"})
                     <div class="col-md-9">
@@ -87,7 +87,7 @@
                         @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
                         <p class="text-danger">@ViewBag.Message1</p>
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group row">
 
@@ -353,27 +353,39 @@
 @*LogIn Information*@
     <div id="menu5" class="tab-pane fade">
         <div class="form-horizontal">
-            <h3 class="col-md-offset-3">LogIn Information </h3><br />
+
+            <h3 class="col-md-offset-3">LogIn Information </h3><br/>
             <div class="form-group row">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.IsChecked,"Role Assign", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-6">
-                    @Html.TextBoxFor(model=>model.Email, null,  htmlAttributes: new { @class = "form-control",@placeholder = "Email" })
+                    <p>By Default Its User</p>
+                    Controller
+                    @Html.CheckBoxFor(model => model.IsChecked)
+                    @Html.ValidationMessageFor(model => model.IsChecked, "", new {@class = "text-danger"})
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-6">
+                    @Html.TextBoxFor(model => model.Email, null, htmlAttributes: new {@class = "form-control", @placeholder = "Email"})
+                    @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model=>model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Password, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-6">
-                    @Html.TextBoxFor(model => model.Password,  htmlAttributes: new { @class = "form-control", @placeholder = "Password" })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(model => model.Password, htmlAttributes: new {@class = "form-control", @placeholder = "Password"})
+                    @Html.ValidationMessageFor(model => model.Password, "", new {@class = "text-danger"})
                 </div>
             </div>
             <div class="form-group row">
-                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-6">
-                    @Html.TextBoxFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "form-control", @placeholder = "ConfirmPassword" })
-                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(model => model.ConfirmPassword, htmlAttributes: new {@class = "form-control", @placeholder = "ConfirmPassword"})
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new {@class = "text-danger"})
                 </div>
             </div>
 
