mail service added in controller queue

--- a/RMS.App/Views/MailServices/Details.cshtml
+++ b/RMS.App/Views/MailServices/Details.cshtml
@@ -5,34 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
-
+<h2>Mail Details</h2>
+<hr />
 <div>
-    <h4>MailService</h4>
-    <hr />
+    
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.RequisitionNumber)
-        </dd>
-
+       
         <dt>
             @Html.DisplayNameFor(model => model.To)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.To)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.From)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.From)
         </dd>
 
         <dt>
@@ -50,7 +34,13 @@
         <dd>
             @Html.DisplayFor(model => model.Body)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.From)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.From)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.MailSendingDateTime)
         </dt>
@@ -58,10 +48,15 @@
         <dd>
             @Html.DisplayFor(model => model.MailSendingDateTime)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.RequisitionId)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Requisition.RequisitionNumber)
+        </dd>
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
 </p>
