--- a/RMS.App/Views/MailServices/Index.cshtml
+++ b/RMS.App/Views/MailServices/Index.cshtml
@@ -4,61 +4,159 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-<h2>Index</h2>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.To)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.From)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Subject)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MailSendingDateTime)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Requisition.RequisitionNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.To)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.From)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Subject)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Body)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MailSendingDateTime)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
 }
+<h2>All Mail </h2>
+<hr/>
+@if (TempData["msg"] != null)
+{
+    <div class="alert alert-success">
+        @Html.Raw(TempData["msg"])
+    </div>
+}
+@if (TempData["msg1"] != null)
+{
+    <div class="alert alert-danger">
+        @Html.Raw(TempData["msg1"])
+    </div>
+}
+<div class="container">
+    <p>
+        @Html.ActionLink("New Mail", "Create", null, new { @class = "btn btn-success" })
+    </p>
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.To)
+                </th>
+                
+                <th>
+                    @Html.DisplayNameFor(model => model.Subject)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Body)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.From)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.MailSendingDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                var sl = 0;
+                if (Model.Count() != 0)
+                {
 
-</table>
+                    foreach (var item in Model)
+                    {
+                        sl++;
+                        <tr>
+                            <td>
+                                @sl
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.To)
+                            </td>
+                            
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Subject)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Body)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.From)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.MailSendingDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.RequisitionNumber)
+                            </td>
+                            <td>
+
+                                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-info" })
+
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td class="text-center text-danger" colspan="3"> Data Not Found!</td>
+                    </tr>
+                }
+            }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary text-white">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.To)
+                </th>
+                
+                <th>
+                    @Html.DisplayNameFor(model => model.Subject)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Body)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.From)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.MailSendingDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
+
+    </table>
+</div>
+
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
