--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                                     <hr/>
                                 </div>
                                 <br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo1"><i class="fa fa-bank" aria-hidden="true"></i> Organization</a><br/>
                                     </div>
@@ -68,7 +68,7 @@
                                 </div>
                                 <br/><br/>
 
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
 
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo2"><i class="fa fa-briefcase" aria-hidden="true"></i> Department</a><br/>
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo4"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Designation</a><br/>
                                     </div>
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo5"><i class="fa fa-user" aria-hidden="true"></i> Employee Type</a><br/>
                                     </div>
@@ -98,7 +98,7 @@
                                     </div>
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo6"><i class="fa fa-user" aria-hidden="true"></i> Employee</a><br />
                                     </div>
@@ -108,7 +108,7 @@
                                     </div>
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo7"><i class="fa fa-user" aria-hidden="true"></i> Driver</a><br />
                                     </div>
@@ -118,7 +118,7 @@
                                     </div>
                                 </div>
                                 <br /><br />
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo8"><i class="fa fa-car" aria-hidden="true"></i> Vehicle Type</a><br/>
                                     </div>
@@ -128,7 +128,7 @@
                                     </div>
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-12">
+                                <div class="col-md-12"style="font-size: 16px;">
                                     <div class="col-md-12 col-12">
                                         <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo9"><i class="fa fa-car" aria-hidden="true"></i> Vehicle</a><br/>
                                     </div>
@@ -171,6 +171,31 @@
                                     <br />
                                 </div>
                             }
+                        <!--Mail Service-->
+                        @if (User.IsInRole("Controller")) 
+                        {
+                            <br/><br/>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h3 class="text-dark">
+                                        <i class="fa fa-envelope-open" aria-hidden="true"></i> Mail Service
+                                    </h3>
+                                    <hr />
+                                </div>
+                                <br /><br />
+                                <div class="col-md-12" style="font-size: 16px;">
+                                    <div class="col-md-12 col-12">
+                                        <a href="#" class="font-weight-light text-black" data-toggle="collapse" data-target="#demo10"><i class="fa fa-envelope-o" aria-hidden="true"></i> Mail</a><br />
+                                    </div>
+                                    <div id="demo10" class="col-md-12 col-12 collapse clearfix" style="margin-left: 35px;">
+                                        @Html.ActionLink("Send New", "Create", "MailServices")<br />
+                                        @Html.ActionLink("List Of Mail", "Index", "MailServices")
+                                    </div>
+                                </div>
+                                <br/><br/>
+                            </div>
+                                
+                        }
                       </div>
 
                     <div class="col-md-9">
