Change Password Added In System

--- a/RMS.App/Views/Shared/_LoginPartial.cshtml
+++ b/RMS.App/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
     <ul class="nav-menu float-right">
         <li>
-            @Html.ActionLink("Hello  " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "btn btn-sm btn-outline-info bg-transparent text-white" })
+            @Html.ActionLink("Hello  " + User.Identity.GetUserName() + "!", "Index", "Account", routeValues: null, htmlAttributes: new { title = "Manage", @class = "btn btn-sm btn-outline-info bg-transparent text-white" })
         </li>
         <li>
             <a class="btn btn-sm btn-outline-info bg-transparent text-white" href="javascript:document.getElementById('logoutForm').submit()">Log Out</a>
